--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
-    "nuka-carousel": "^8.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-responsive": "^10.0.1",
-    "tailwindcss": "^4.1.10"
+    "react-router-dom": "^7.6.3",
+    "tailwindcss": "^4.1.10",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -29,7 +30,6 @@
     "globals": "^16.0.0",
     "prettier": "^3.6.1",
     "prettier-plugin-tailwindcss": "^0.6.13",
-    "vite": "^6.3.5",
-    "vite-plugin-svgr": "^4.3.0"
+    "vite": "^6.3.5"
   }
 }
