--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-hook-form": "^7.62.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.6.3",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.10",
     "vite-plugin-svgr": "^4.3.0"
   },
